<package format="2">
  <name>dynamic-graph-python</name>
  <version>3.5.1</version>
  <description>
    Dynamic graph library Python bindings
  </description>
  <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>
  <license>BSD</license>

  <url>http://github.com/stack-of-tasks/dynamic-graph-python</url>
  <author>Nicolas Mansard</author>
  <author>Olivier Stasse</author>

  <build_depend>roscpp</build_depend>
  <build_depend>dynamic-graph</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>dynamic-graph</exec_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>dynamic-graph</build_export_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <doc_depend>doxygen</doc_depend>

</package>
