<?xml version="1.0"?>
<package format="3">
  <name>dynamic-graph-python</name>
  <version>4.0.10</version>
  <description>Dynamic graph library Python bindings</description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <author>Nicolas Mansard</author>
  <author>Olivier Stasse</author>
  <license>BSD</license>

  <url type="website">https://github.com/stack-of-tasks/dynamic-graph-python</url>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>

  <!-- The following tag is recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>

  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</depend>
  <depend>eigen</depend>
  <depend>boost</depend>
  <depend>eigenpy</depend>
  <depend>dynamic-graph</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
